--- a/Expences Details/css/style.css
+++ b/Expences Details/css/style.css
@@ -1,4 +1,6 @@
-
+body{
+    background: silver;
+}
 /* #Customer{
     background: linear-gradient(rgba(0,0,0,0.5),#e07599);
 } */
@@ -35,7 +37,7 @@
 .main h1{
     display: flex;
     justify-content: center;
-    font-size: 50px;
+    font-size: 32px;
 }
 
 .main-form{
@@ -45,34 +47,54 @@
 
 .form-flex{
     margin-left: 30%;
-    background: linear-gradient(rgba(0,0,0,0.5),#e92868);
-    width: 40%;
+    background: #ffffff;
+    /* background: linear-gradient(rgba(0,0,0,0.5),#e92868); */
+    width: 80vh;
     height: 50%;
-    text-shadow: 2px 2px 4px #000000;
-    box-shadow: 8px 8px 20px #000000;
+    /* text-shadow: 2px 2px 4px #000000; */
+    box-shadow: 12px 12px 20px #000000;
+    border-radius: 20PX;
 }
 .lbl{
-    padding-left: 15%;
-    font-size: 25px;
+    padding-top: 80%;
+    padding-left: 10%;
+    font-size: 18px;
 }
 .input{
     width: 40%;
+    padding: 5px;
     border-radius: 5px;
-    font-size: 23px;
+    font-size: 18px;
+    background: transparent;
+    border: 2px solid rgb(219, 218, 218);
+    height: 5%;
+    float: right;
+    margin-right: 30px;;
 }
+
+.imginput{
+    /* font-size: 10px; */
+    border: 2px solid rgb(219, 218, 218);
+    float: right;
+    margin-right: 45px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    width: 270px;
+}
+
 .btn-l{
     margin-left: 28%;
     font-size: 25px;
     border-radius: 5px;
-    background-color: #e92868;
-    color: beige;
+    background-color: silver;
+    color: black;
     width: 20%;
 }
 .btn-s{
     margin-left: 7%;
     font-size: 25px;
     border-radius: 5px;
-    background-color: #e92868;
-    color: beige;
+    background-color: silver;
+    color: black;
     width: 20%;
 }
