--- a/Login Page Form/CSS/style.css
+++ b/Login Page Form/CSS/style.css
@@ -7,34 +7,36 @@
 #Login{
     height: 100vh;
     /* background: rgb(228, 134, 228); */
-    background-image: linear-gradient(rgba(0,0,0,0.5),#e92868),url(/Media/RK_Banner.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.5),#e92868),url(../Media/banner.jpg);
     background-position: center;
     background-size: cover;
 }
 
 .login-heading{
     display: flex;
-    justify-content: center;
     padding-top: 5%;
-    margin: auto;
+    margin-left: 16%;
     font-size: 35px;
 }
 
 .logo{
     width: 10%;
     height: 10%;
+    /* margin-left: 2%; */
 }
 
 .Login-flex{
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
 }
 
 .from-box{
     width: 40%;
     height: 60%;
     /* background: cadetblue; */
-    margin: auto;
+    margin-left: 2%;
+    /* border: 5px solid; */
+    /* padding-bottom: 5%; */
 }
 
 .main-heading{
@@ -51,8 +53,13 @@
 }
 
 .input{
-    font-size: 20px;
-    text-decoration: none;
+    font-size: 15px;
+    padding: 1%;
+    background: transparent;
+    border: 2px solid black;
+    border-radius: 5px;
+    width: 250px;
+    
 }
 
 .input-a{
@@ -68,6 +75,8 @@
     font-size: 20px;
     margin-left: 10%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: rgb(226, 226, 68);
-    border-radius: 8px;
+    background-color: rgb(226, 68, 121);
+    border-radius: 5px;
+    color: #000000;
+    padding: 5px;
 }
